@@ -70,3 +70,10 @@ Changelog:
 - Changes to GUI so that it overrides default theme and works as expected
 - Updated the webhook so that it reads the settings when the macro is started and not when the program is launched
 - Added a way to update the macro via the GUI
+
+21/1/23
+ - Added a way to update the macro via the GUI
+ - Makes the macro autoclick when it cant find the canon, to exit any bear dialog
+ - Increased the rejoin time to 50secs. (The macro will wait for 50s for roblox to load when rejoining) 
+ - Implemented threshold hive searching. This allows the macro to automatically find the best possible hive orientation if hive searching fails
+ - Reduced searching area of disconnect.png to lower chances of false positives
